@@ -4,6 +4,7 @@ NEWS
 0.90
 	Added a new provider for freebusy over HTTP (fburl)
 	Searches on CardDAV addressbooks would see their spaces "url-escaped".
+	Added support for returning a pre-configurable comment to put on autocomplete records
 
 0.81
 	Check the response from the server to avoid inconsistencies and loss of data
